# FSMgine

./: .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  OPTIMIZATION_RESULTS.md  PROFILING.md  README.md  REQUIREMENTS.md
.github/workflows/: doxygen.yml
benchmarks/: CMakeLists.txt  bench_FSM.cpp  bench_StringInterner.cpp  simple_timer_benchmark.cpp
cmake/: FSMgineConfig.cmake.in
examples/: calculator.cpp  my_fsm.cpp  no_class_functional.cpp  other_class_eventful.cpp  other_class_instance.cpp  parentheses_checker.cpp  png_parser.cpp  protocol_parser.cpp  resource_pool_example.cpp  turnstile_example.cpp
include/: CodeGenerator.hpp  DSLRules.hpp  FSMgineCore.hpp  fsmgine.hpp
include/FSMgine/: FSM.hpp  FSMBuilder.hpp  FSMgine.hpp  StringInterner.hpp  Transition.hpp
scripts/: build_docs.sh  profile.sh  setup_profiling.sh
src/: CodeGenerator.cpp  DSLRules.cpp  FSM.cpp  FSMBuilder.cpp  FSMgineCore.cpp  StringInterner.cpp  Transition.cpp  fsmgine.cpp  main.cpp
tests/: CMakeLists.txt  simple_test_runner.cpp  test_FSM.cpp  test_Integration.cpp  test_StringInterner.cpp  test_Transition.cpp
